mobile flicker fix 02

--- a/v2/style.css
+++ b/v2/style.css
@@ -22,10 +22,10 @@ h2 {
 }
 
 #scroller {
-  height: 100%;
+  height: 1000px;
   width: 100%;
   overflow-y: scroll;
-	scroll-snap-type: y proximity;
+	scroll-snap-type: y mandatory;
   overscroll-behavior: none;
   scroll-snap-stop: always;
 }
